# project-esp32c3-std

./: .gitignore
project1/: Cargo.toml  diagram.json  wokwi.toml
project1/.cargo/: config.toml
project1/src/: main.rs
project2/: Cargo.toml  diagram.json  wokwi.toml
project2/src/: main.rs
