[package]
name = "project2"
version = "0.1.0"
authors = ["kelvin"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "project2"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
anyhow = "1.0"
# We set these to "*" so they don't conflict with the GitHub patches
esp-idf-sys = { version = "*", features = ["binstart"] }
esp-idf-hal = "*"
esp-idf-svc = { version = "*", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embassy-time = { version = "0.5", features = ["generic-queue-8"] }

[build-dependencies]
embuild = "0.33"

[patch.crates-io]
# This forces the entire project to use the same "bleeding edge" versions
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }